fix weird shadow bug on safari

--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,7 @@ main {
     gap: 1vw 1vw;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: masonry;
+    -webkit-transform: translateZ(-1000px);
 }
 
 .post {
